[application] Make sure the service worker section buttons are visible.
Fixed: 382396712
Bug: 40824726
Screenshot: https://imgur.com/vOpHVP3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097341
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/front_end/panels/application/serviceWorkersView.css
+++ b/front_end/panels/application/serviceWorkersView.css
@@ -140,11 +140,6 @@
   flex-grow: 0;
 }
 
-.service-workers-this-origin,
-.service-workers-other-origin {
-  min-width: max-content;
-}
-
 .service-worker-has-current .service-workers-other-origin {
   margin-top: 16px;
   border-top: 1px solid var(--sys-color-divider);
