--- a/front_end/ui/legacy/reportView.css
+++ b/front_end/ui/legacy/reportView.css
@@ -54,15 +54,21 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  devtools-button {
+    flex: 0 0 auto;
+  }
 }
 
 .report-section-title {
-  flex: auto;
+  flex: 1 1 auto;
   text-overflow: ellipsis;
   overflow: hidden;
   line-height: 16px;
   font-weight: bold;
   color: var(--sys-color-on-surface);
+  min-width: var(--sys-size-21);
+  white-space: nowrap;
 }
 
 .report-field {
